# SpectraWise-Engine

./: CMakeLists.txt  LICENSE  README.md  Todo.md  authors.txt
engine/: CMakeLists.txt  config.h
engine/core/: CMakeLists.txt
engine/core/input/: inputManager.cc  inputManager.h  key.h  keyboard.h  mouse.h
engine/misc/: CMakeLists.txt
engine/physics/: CMakeLists.txt
engine/render/: CMakeLists.txt  RenderBasic.cc  RenderBasic.h  camera.cc  camera.h  computeshader.cc  computeshader.h  shader.cc  shader.h  window.cc  window.h
engine/render/input/: inputManager.cc  key.cc
exts/: CMakeLists.txt
projects/: CMakeLists.txt
projects/TestProject/: CMakeLists.txt
projects/TestProject/code/: gameApp.cc  gameApp.h  main.cc
